# AzurLane-Tech-Research-Helper

./: .gitignore  Cargo.toml  README.md  build.rs  dataset.csv  html_content.html  package-lock.json  package.json  rust.h  techresearch.html  techresearch.js
src/: actual.rs  calc.rs  dataset.rs  ffi.rs  ffic.rs  lib.rs  restriction.rs  tests.rs
src/value/: restriction.rs
techresearch/: techresearch.html
template/: dataset.tera.rs
tests/: web.rs
