[package]
name = "azurlane_tech_research"
version = "0.1.2"
authors = ["Embers-of-the-Fire <stellarishs@163.com>"]
edition = "2018"
description = "Wasm application for Azur Lane wiki(Bwiki) - Tech Research section."
repository = "https://github.com/Embers-of-the-Fire/AzurLane-Tech-Research-Helper.git"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Embers-of-the-Fire/AzurLane-Tech-Research-Helper"

[lib]
crate-type = ["cdylib"]
